--- a/python/prohibition_web_svc/Dockerfile
+++ b/python/prohibition_web_svc/Dockerfile
@@ -14,5 +14,5 @@ COPY prohibition_web_svc ${APP_ROOT}/src/python/prohibition_web_svc
 
 RUN ["python", "-m", "pytest", "python/prohibition_web_svc"]
 
-CMD [ "gunicorn", "--error-logfile", "-", "--bind", "0.0.0.0:5000", "--pythonpath", "python/prohibition_web_svc", "app:create_app()" ]
+CMD [ "gunicorn", "--error-logfile", "-", "--bind", "0.0.0.0:5000", "--pythonpath", "python/prohibition_web_svc", "wsgi:create_app()" ]
 
