--- a/python/prohibition_web_svc/requirements.txt
+++ b/python/prohibition_web_svc/requirements.txt
@@ -19,6 +19,7 @@ convertdate==2.2.0
 cryptography==3.3.2
 dparse==0.5.1
 ecdsa==0.17.0
+flask-marshmallow==0.14.0
 gunicorn==20.0.4
 holidays==0.10.4
 idna==2.10
