add '/roadside-forms' to nginx try_files

--- a/web_app/nginx.conf
+++ b/web_app/nginx.conf
@@ -1,6 +1,6 @@
 user  nginx;
 worker_processes  1;
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log debug;
 pid        /var/run/nginx.pid;
 events {
   worker_connections  1024;
@@ -20,7 +20,7 @@ http {
     root   /app/dist;
     location /roadside-forms {
        alias /app/dist;
-       try_files $uri $uri/ /index.html;
+       try_files $uri $uri/ /roadside-forms/index.html;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
