change vue-router to hash mode

--- a/web_app/nginx.conf
+++ b/web_app/nginx.conf
@@ -20,7 +20,7 @@ http {
     root   /app/dist;
     location /roadside-forms {
        alias /app/dist;
-       try_files $uri $uri/ /roadside-forms/index.html;
+       try_files $uri $uri/ /index.html;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
